--- a/Módulo 2/Desafios/desafio010.html
+++ b/Módulo 2/Desafios/desafio010.html
@@ -32,11 +32,11 @@
             <img src="imagens/dan-droids.png" alt="Primeira imagem dos androids.">
         </picture>
         <p>
-            Essa primeira versão bizarra atpe foi batizada em homnagem ao seu criador seriam os <strong>Dandroids</strong>
+            Essa primeira versão bizarra atpe foi batizada em homenagem ao seu criador seriam os <strong>Dandroids</strong>
         </p>
 
         <h3 class="titulo">Surge um Novo Mascote</h3>
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" rel="externo"><strong>Irina Blok &#x1F517,</a></strong>também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" rel="externo"><strong>Irina Blok &#x1F517</a></strong>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
         
         <picture>
             <source class="p" media="(max-width: 840px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
