--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -11,14 +11,20 @@
     <style>
         body {
             height: 100vh;
+            /* 
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main {
-            width: 400px;
+            max-width: 400px;
             background-color: white;
             padding: 10px;
             margin: auto;
@@ -36,6 +42,15 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil, perferendis suscipit quos corporis unde, veniam iste molestiae vel explicabo nobis enim? Reiciendis est ipsa magnam impedit possimus, et molestiae? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur adipisci, itaque quibusdam, iste vero tempore amet, dignissimos beatae laudantium molestias suscipit magnam. Voluptates repellat esse maxime, laborum obcaecati totam sunt? lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim doloremque modi maiores sed cupiditate eligendi quaerat sint, tempora at quibusdam est mollitia nemo distinctio neque reprehenderit minima a excepturi.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil, perferendis suscipit quos corporis unde, veniam iste molestiae vel explicabo nobis enim? Reiciendis est ipsa magnam impedit possimus, et molestiae? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur adipisci, itaque quibusdam, iste vero tempore amet, dignissimos beatae laudantium molestias suscipit magnam. Voluptates repellat esse maxime, laborum obcaecati totam sunt? lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim doloremque modi maiores sed cupiditate eligendi quaerat sint, tempora at quibusdam est mollitia nemo distinctio neque reprehenderit minima a excepturi.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil, perferendis suscipit quos corporis unde, veniam iste molestiae vel explicabo nobis enim? Reiciendis est ipsa magnam impedit possimus, et molestiae? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur adipisci, itaque quibusdam, iste vero tempore amet, dignissimos beatae laudantium molestias suscipit magnam. Voluptates repellat esse maxime, laborum obcaecati totam sunt? lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim doloremque modi maiores sed cupiditate eligendi quaerat sint, tempora at quibusdam est mollitia nemo distinctio neque reprehenderit minima a excepturi.
+        </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil, perferendis suscipit quos corporis unde, veniam iste molestiae vel explicabo nobis enim? Reiciendis est ipsa magnam impedit possimus, et molestiae? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur adipisci, itaque quibusdam, iste vero tempore amet, dignissimos beatae laudantium molestias suscipit magnam. Voluptates repellat esse maxime, laborum obcaecati totam sunt? lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione enim doloremque modi maiores sed cupiditate eligendi quaerat sint, tempora at quibusdam est mollitia nemo distinctio neque reprehenderit minima a excepturi.
         </p>
