Desafio dos filmes
Fim

--- a/Desafios/desafio013/filmes.html
+++ b/Desafios/desafio013/filmes.html
@@ -41,7 +41,7 @@
         <thead>
          <th>Grupos</th>
          <th>Nomes</th>
-         <th colspan="3">Filmes</th>       
+         <th colspan="3" scope="rowgroup">Filmes</th>       
         </thead>
         
         <tbody>
