--- a/Exercícios/ex026/mq004/index.html
+++ b/Exercícios/ex026/mq004/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     
     <title>Media Query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+
+        <img id="iphone" src="imagens/icon-phone.png" alt="Versão para smartphone">
+        <img id="itablet" src="imagens/icon-tablet.png" alt="Versão para tablet">
+        <img id="iprint" src="imagens/icon-print.png" alt="Versão para Impressão">
+        <img id="ipc" src="imagens/icon-pc.png" alt="Versão para pc">
+        <img id="itv" src="imagens/icon-tv.png" alt="Versão para tv">
+    </main>
 </body>
 </html>
