--- a/Exercícios/ex026/mq005/index.html
+++ b/Exercícios/ex026/mq005/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <title>Document</title>
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i id="iburger" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+        <menu id="imenu">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -23,7 +26,7 @@
     </header>
     <main>
         <article>
-            <h2>Testando Media Queries</h2>
+            <h1>Testando Media Queries</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci tempore alias ducimus officia molestiae minus? Voluptates repudiandae beatae dignissimos, in excepturi, eveniet recusandae quas facilis exercitationem aspernatur minus esse fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ducimus, voluptatem vero neque id ipsum similique vel odit non quibusdam libero earum laboriosam pariatur hic, consequuntur recusandae vitae quod quia?
             </p>
@@ -37,5 +40,14 @@
             </p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (imenu.style.display == 'block') {
+                    imenu.style.display = 'none'
+            } else {
+                    imenu.style.display = 'block'
+            }
+        }
+    </script>
 </body>
-</html>
+</html> 
