--- a/Exercícios/ex026/mq005/index.html
+++ b/Exercícios/ex026/mq005/index.html
@@ -7,10 +7,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
+    <link rel="stylesheet" href="estilos/media-query.css">
     <title>Document</title>
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="iburger" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
@@ -41,6 +41,13 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 769) {
+                imenu.style.display= 'block'
+            } else {
+                imenu.style.display = 'none'
+            }
+        }
         function clickMenu() {
             if (imenu.style.display == 'block') {
                     imenu.style.display = 'none'
